LipidXplorer/src/lx/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    NO
    EVERY
    CHECK
    FOR
    PRECURSOR
    UPARROW
    IF
    OF
    CROSSPROD

Grammar

Rule 0     S' -> program
Rule 1     program -> program script SEMICOLON
Rule 2     program -> script SEMICOLON
Rule 3     script -> scriptname variables identification
Rule 4     script -> identification
Rule 5     script -> error variables identification
Rule 6     scriptname -> QUERYNAME IS getQueryName SEMICOLON
Rule 7     getQueryName -> ID
Rule 8     variables -> variables var
Rule 9     variables -> var
Rule 10    var -> DEFINE ID IS object options SEMICOLON
Rule 11    var -> DEFINE ID IS object options AS NEUTRALLOSS SEMICOLON
Rule 12    var -> DEFINE list IS object options SEMICOLON
Rule 13    var -> DEFINE ID options SEMICOLON
Rule 14    object -> withAttr
Rule 15    object -> onlyObj
Rule 16    onlyObj -> ID LBRACE ID RBRACE
Rule 17    onlyObj -> ID
Rule 18    onlyObj -> list
Rule 19    onlyObj -> varcontent
Rule 20    onlyObj -> ID LPAREN arguments RPAREN LBRACE ID RBRACE
Rule 21    onlyObj -> ID LPAREN arguments RPAREN
Rule 22    withAttr -> ID DOT ID LBRACE ID RBRACE
Rule 23    withAttr -> ID DOT ID LBRACE STRING RBRACE
Rule 24    withAttr -> ID DOT ID
Rule 25    withAttr -> varcontent DOT ID
Rule 26    withAttr -> list DOT ID
Rule 27    arguments -> expression
Rule 28    arguments -> arguments COMMA expression
Rule 29    list -> LBRACKET listcontent RBRACKET
Rule 30    listcontent -> listcontent COMMA object
Rule 31    listcontent -> object
Rule 32    varcontent -> tolerancetype
Rule 33    varcontent -> FLOAT
Rule 34    varcontent -> INTEGER
Rule 35    varcontent -> PLUS INTEGER
Rule 36    varcontent -> MINUS INTEGER
Rule 37    varcontent -> STRING
Rule 38    varcontent -> SFSTRING
Rule 39    options -> WITH optioncontent
Rule 40    options -> <empty>
Rule 41    optioncontent -> optioncontent COMMA optionentry
Rule 42    optioncontent -> optionentry
Rule 43    optionentry -> DBR IS LPAREN object COMMA object RPAREN
Rule 44    optionentry -> CHG IS INTEGER
Rule 45    optionentry -> MASSRANGE IS LPAREN object COMMA object RPAREN
Rule 46    optionentry -> MINOCC IS object
Rule 47    optionentry -> MAXOCC IS object
Rule 48    optionentry -> RETENTIONTIME IS object
Rule 49    optionentry -> TOLERANCE IS tolerancetype
Rule 50    tolerancetype -> FLOAT DA
Rule 51    tolerancetype -> FLOAT PPM
Rule 52    tolerancetype -> INTEGER DA
Rule 53    tolerancetype -> INTEGER RES
Rule 54    tolerancetype -> INTEGER PPM
Rule 55    identification -> IDENTIFY tagname WHERE marks evalMarks suchthat REPORT report
Rule 56    identification -> IDENTIFY tagname WHERE marks evalMarks REPORT report
Rule 57    identification -> IDENTIFY tagname WHERE marks evalMarks suchthat interpretation REPORT report
Rule 58    identification -> IDENTIFY tagname WHERE marks evalMarks interpretation REPORT report
Rule 59    identification -> IDENTIFY marks evalMarks suchthat REPORT report
Rule 60    identification -> IDENTIFY marks evalMarks REPORT report
Rule 61    identification -> IDENTIFY marks evalMarks suchthat interpretation REPORT report
Rule 62    identification -> IDENTIFY marks evalMarks interpretation REPORT report
Rule 63    tagname -> ID
Rule 64    scinput -> ID
Rule 65    marks -> boolmarks
Rule 66    boolmarks -> LPAREN boolmarks RPAREN
Rule 67    boolmarks -> NOT boolmarks
Rule 68    boolmarks -> boolmarks OR boolmarks
Rule 69    boolmarks -> boolmarks AND boolmarks
Rule 70    boolmarks -> boolmarks IFA boolmarks
Rule 71    boolmarks -> boolmarks IFF boolmarks
Rule 72    boolmarks -> boolmarks ARROW boolmarks
Rule 73    boolmarks -> boolmarks LE boolmarks
Rule 74    boolmarks -> scan
Rule 75    evalMarks -> <empty>
Rule 76    suchthat -> SUCHTHAT body
Rule 77    body -> bterm
Rule 78    bterm -> booleanterm
Rule 79    booleanterm -> booleanterm AND booleanterm
Rule 80    booleanterm -> booleanterm OR booleanterm
Rule 81    booleanterm -> LPAREN booleanterm RPAREN
Rule 82    booleanterm -> NOT booleanterm
Rule 83    booleanterm -> expr
Rule 84    booleanterm -> object
Rule 85    expr -> expression EQUALS expression options
Rule 86    expr -> expression GT expression options
Rule 87    expr -> expression GE expression options
Rule 88    expr -> expression LE expression options
Rule 89    expr -> expression LT expression options
Rule 90    expr -> expression NE expression options
Rule 91    expression -> expression PLUS expression
Rule 92    expression -> expression MINUS expression
Rule 93    expression -> expression TIMES expression
Rule 94    expression -> expression DIVIDE expression
Rule 95    expression -> LPAREN expression RPAREN LBRACE ID RBRACE
Rule 96    expression -> LPAREN expression RPAREN
Rule 97    expression -> object
Rule 98    interpretation -> INTERPRETATION expr
Rule 99    scan -> object IN scope options
Rule 100   scope -> MS1 MINUS
Rule 101   scope -> MS1 PLUS
Rule 102   scope -> MS2 PLUS
Rule 103   scope -> MS2 MINUS
Rule 104   report -> reportContent
Rule 105   reportContent -> reportContent rContent
Rule 106   reportContent -> rContent
Rule 107   rContent -> ID IS STRING PERCENT STRING SEMICOLON
Rule 108   rContent -> ID IS expression SEMICOLON

Terminals, with rules where they appear

AND                  : 69 79
ARROW                : 72
AS                   : 11
CHECK                : 
CHG                  : 44
COMMA                : 28 30 41 43 45
CROSSPROD            : 
DA                   : 50 52
DBR                  : 43
DEFINE               : 10 11 12 13
DIVIDE               : 94
DOT                  : 22 23 24 25 26
EQUALS               : 85
EVERY                : 
FLOAT                : 33 50 51
FOR                  : 
GE                   : 87
GT                   : 86
ID                   : 7 10 11 13 16 16 17 20 20 21 22 22 22 23 23 24 24 25 26 63 64 95 107 108
IDENTIFY             : 55 56 57 58 59 60 61 62
IF                   : 
IFA                  : 70
IFF                  : 71
IN                   : 99
INTEGER              : 34 35 36 44 52 53 54
INTERPRETATION       : 98
IS                   : 6 10 11 12 43 44 45 46 47 48 49 107 108
LBRACE               : 16 20 22 23 95
LBRACKET             : 29
LE                   : 73 88
LPAREN               : 20 21 43 45 66 81 95 96
LT                   : 89
MASSRANGE            : 45
MAXOCC               : 47
MINOCC               : 46
MINUS                : 36 92 100 103
MS1                  : 100 101
MS2                  : 102 103
NE                   : 90
NEUTRALLOSS          : 11
NO                   : 
NOT                  : 67 82
OF                   : 
OR                   : 68 80
PERCENT              : 107
PLUS                 : 35 91 101 102
PPM                  : 51 54
PRECURSOR            : 
QUERYNAME            : 6
RBRACE               : 16 20 22 23 95
RBRACKET             : 29
REPORT               : 55 56 57 58 59 60 61 62
RES                  : 53
RETENTIONTIME        : 48
RPAREN               : 20 21 43 45 66 81 95 96
SEMICOLON            : 1 2 6 10 11 12 13 107 108
SFSTRING             : 38
STRING               : 23 37 107 107
SUCHTHAT             : 76
TIMES                : 93
TOLERANCE            : 49
UPARROW              : 
WHERE                : 55 56 57 58
WITH                 : 39
error                : 5

Nonterminals, with rules where they appear

arguments            : 20 21 28
body                 : 76
booleanterm          : 78 79 79 80 80 81 82
boolmarks            : 65 66 67 68 68 69 69 70 70 71 71 72 72 73 73
bterm                : 77
evalMarks            : 55 56 57 58 59 60 61 62
expr                 : 83 98
expression           : 27 28 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 96 108
getQueryName         : 6
identification       : 3 4 5
interpretation       : 57 58 61 62
list                 : 12 18 26
listcontent          : 29 30
marks                : 55 56 57 58 59 60 61 62
object               : 10 11 12 30 31 43 43 45 45 46 47 48 84 97 99
onlyObj              : 15
optioncontent        : 39 41
optionentry          : 41 42
options              : 10 11 12 13 85 86 87 88 89 90 99
program              : 1 0
rContent             : 105 106
report               : 55 56 57 58 59 60 61 62
reportContent        : 104 105
scan                 : 74
scinput              : 
scope                : 99
script               : 1 2
scriptname           : 3
suchthat             : 55 57 59 61
tagname              : 55 56 57 58
tolerancetype        : 32 49
var                  : 8 9
varcontent           : 19 25
variables            : 3 5 8
withAttr             : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program script SEMICOLON
    (2) program -> . script SEMICOLON
    (3) script -> . scriptname variables identification
    (4) script -> . identification
    (5) script -> . error variables identification
    (6) scriptname -> . QUERYNAME IS getQueryName SEMICOLON
    (55) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat REPORT report
    (56) identification -> . IDENTIFY tagname WHERE marks evalMarks REPORT report
    (57) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat interpretation REPORT report
    (58) identification -> . IDENTIFY tagname WHERE marks evalMarks interpretation REPORT report
    (59) identification -> . IDENTIFY marks evalMarks suchthat REPORT report
    (60) identification -> . IDENTIFY marks evalMarks REPORT report
    (61) identification -> . IDENTIFY marks evalMarks suchthat interpretation REPORT report
    (62) identification -> . IDENTIFY marks evalMarks interpretation REPORT report

    error           shift and go to state 6
    QUERYNAME       shift and go to state 2
    IDENTIFY        shift and go to state 7

    script                         shift and go to state 1
    scriptname                     shift and go to state 3
    program                        shift and go to state 4
    identification                 shift and go to state 5

state 1

    (2) program -> script . SEMICOLON

    SEMICOLON       shift and go to state 8


state 2

    (6) scriptname -> QUERYNAME . IS getQueryName SEMICOLON

    IS              shift and go to state 9


state 3

    (3) script -> scriptname . variables identification
    (8) variables -> . variables var
    (9) variables -> . var
    (10) var -> . DEFINE ID IS object options SEMICOLON
    (11) var -> . DEFINE ID IS object options AS NEUTRALLOSS SEMICOLON
    (12) var -> . DEFINE list IS object options SEMICOLON
    (13) var -> . DEFINE ID options SEMICOLON

    DEFINE          shift and go to state 12

    variables                      shift and go to state 10
    var                            shift and go to state 11

state 4

    (0) S' -> program .
    (1) program -> program . script SEMICOLON
    (3) script -> . scriptname variables identification
    (4) script -> . identification
    (5) script -> . error variables identification
    (6) scriptname -> . QUERYNAME IS getQueryName SEMICOLON
    (55) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat REPORT report
    (56) identification -> . IDENTIFY tagname WHERE marks evalMarks REPORT report
    (57) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat interpretation REPORT report
    (58) identification -> . IDENTIFY tagname WHERE marks evalMarks interpretation REPORT report
    (59) identification -> . IDENTIFY marks evalMarks suchthat REPORT report
    (60) identification -> . IDENTIFY marks evalMarks REPORT report
    (61) identification -> . IDENTIFY marks evalMarks suchthat interpretation REPORT report
    (62) identification -> . IDENTIFY marks evalMarks interpretation REPORT report

    error           shift and go to state 6
    QUERYNAME       shift and go to state 2
    IDENTIFY        shift and go to state 7

    script                         shift and go to state 13
    scriptname                     shift and go to state 3
    identification                 shift and go to state 5

state 5

    (4) script -> identification .

    SEMICOLON       reduce using rule 4 (script -> identification .)


state 6

    (5) script -> error . variables identification
    (8) variables -> . variables var
    (9) variables -> . var
    (10) var -> . DEFINE ID IS object options SEMICOLON
    (11) var -> . DEFINE ID IS object options AS NEUTRALLOSS SEMICOLON
    (12) var -> . DEFINE list IS object options SEMICOLON
    (13) var -> . DEFINE ID options SEMICOLON

    DEFINE          shift and go to state 12

    variables                      shift and go to state 14
    var                            shift and go to state 11

state 7

    (55) identification -> IDENTIFY . tagname WHERE marks evalMarks suchthat REPORT report
    (56) identification -> IDENTIFY . tagname WHERE marks evalMarks REPORT report
    (57) identification -> IDENTIFY . tagname WHERE marks evalMarks suchthat interpretation REPORT report
    (58) identification -> IDENTIFY . tagname WHERE marks evalMarks interpretation REPORT report
    (59) identification -> IDENTIFY . marks evalMarks suchthat REPORT report
    (60) identification -> IDENTIFY . marks evalMarks REPORT report
    (61) identification -> IDENTIFY . marks evalMarks suchthat interpretation REPORT report
    (62) identification -> IDENTIFY . marks evalMarks interpretation REPORT report
    (63) tagname -> . ID
    (65) marks -> . boolmarks
    (66) boolmarks -> . LPAREN boolmarks RPAREN
    (67) boolmarks -> . NOT boolmarks
    (68) boolmarks -> . boolmarks OR boolmarks
    (69) boolmarks -> . boolmarks AND boolmarks
    (70) boolmarks -> . boolmarks IFA boolmarks
    (71) boolmarks -> . boolmarks IFF boolmarks
    (72) boolmarks -> . boolmarks ARROW boolmarks
    (73) boolmarks -> . boolmarks LE boolmarks
    (74) boolmarks -> . scan
    (99) scan -> . object IN scope options
    (14) object -> . withAttr
    (15) object -> . onlyObj
    (22) withAttr -> . ID DOT ID LBRACE ID RBRACE
    (23) withAttr -> . ID DOT ID LBRACE STRING RBRACE
    (24) withAttr -> . ID DOT ID
    (25) withAttr -> . varcontent DOT ID
    (26) withAttr -> . list DOT ID
    (16) onlyObj -> . ID LBRACE ID RBRACE
    (17) onlyObj -> . ID
    (18) onlyObj -> . list
    (19) onlyObj -> . varcontent
    (20) onlyObj -> . ID LPAREN arguments RPAREN LBRACE ID RBRACE
    (21) onlyObj -> . ID LPAREN arguments RPAREN
    (32) varcontent -> . tolerancetype
    (33) varcontent -> . FLOAT
    (34) varcontent -> . INTEGER
    (35) varcontent -> . PLUS INTEGER
    (36) varcontent -> . MINUS INTEGER
    (37) varcontent -> . STRING
    (38) varcontent -> . SFSTRING
    (29) list -> . LBRACKET listcontent RBRACKET
    (50) tolerancetype -> . FLOAT DA
    (51) tolerancetype -> . FLOAT PPM
    (52) tolerancetype -> . INTEGER DA
    (53) tolerancetype -> . INTEGER RES
    (54) tolerancetype -> . INTEGER PPM

    ID              shift and go to state 29
    LPAREN          shift and go to state 28
    NOT             shift and go to state 34
    FLOAT           shift and go to state 31
    INTEGER         shift and go to state 30
    PLUS            shift and go to state 22
    MINUS           shift and go to state 19
    STRING          shift and go to state 20
    SFSTRING        shift and go to state 26
    LBRACKET        shift and go to state 18

    tolerancetype                  shift and go to state 24
    onlyObj                        shift and go to state 15
    object                         shift and go to state 25
    scan                           shift and go to state 16
    varcontent                     shift and go to state 21
    boolmarks                      shift and go to state 17
    list                           shift and go to state 32
    withAttr                       shift and go to state 27
    tagname                        shift and go to state 33
    marks                          shift and go to state 23

state 8

    (2) program -> script SEMICOLON .

    error           reduce using rule 2 (program -> script SEMICOLON .)
    QUERYNAME       reduce using rule 2 (program -> script SEMICOLON .)
    IDENTIFY        reduce using rule 2 (program -> script SEMICOLON .)
    $end            reduce using rule 2 (program -> script SEMICOLON .)


state 9

    (6) scriptname -> QUERYNAME IS . getQueryName SEMICOLON
    (7) getQueryName -> . ID

    ID              shift and go to state 36

    getQueryName                   shift and go to state 35

state 10

    (3) script -> scriptname variables . identification
    (8) variables -> variables . var
    (55) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat REPORT report
    (56) identification -> . IDENTIFY tagname WHERE marks evalMarks REPORT report
    (57) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat interpretation REPORT report
    (58) identification -> . IDENTIFY tagname WHERE marks evalMarks interpretation REPORT report
    (59) identification -> . IDENTIFY marks evalMarks suchthat REPORT report
    (60) identification -> . IDENTIFY marks evalMarks REPORT report
    (61) identification -> . IDENTIFY marks evalMarks suchthat interpretation REPORT report
    (62) identification -> . IDENTIFY marks evalMarks interpretation REPORT report
    (10) var -> . DEFINE ID IS object options SEMICOLON
    (11) var -> . DEFINE ID IS object options AS NEUTRALLOSS SEMICOLON
    (12) var -> . DEFINE list IS object options SEMICOLON
    (13) var -> . DEFINE ID options SEMICOLON

    IDENTIFY        shift and go to state 7
    DEFINE          shift and go to state 12

    identification                 shift and go to state 37
    var                            shift and go to state 38

state 11

    (9) variables -> var .

    IDENTIFY        reduce using rule 9 (variables -> var .)
    DEFINE          reduce using rule 9 (variables -> var .)


state 12

    (10) var -> DEFINE . ID IS object options SEMICOLON
    (11) var -> DEFINE . ID IS object options AS NEUTRALLOSS SEMICOLON
    (12) var -> DEFINE . list IS object options SEMICOLON
    (13) var -> DEFINE . ID options SEMICOLON
    (29) list -> . LBRACKET listcontent RBRACKET

    ID              shift and go to state 40
    LBRACKET        shift and go to state 18

    list                           shift and go to state 39

state 13

    (1) program -> program script . SEMICOLON

    SEMICOLON       shift and go to state 41


state 14

    (5) script -> error variables . identification
    (8) variables -> variables . var
    (55) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat REPORT report
    (56) identification -> . IDENTIFY tagname WHERE marks evalMarks REPORT report
    (57) identification -> . IDENTIFY tagname WHERE marks evalMarks suchthat interpretation REPORT report
    (58) identification -> . IDENTIFY tagname WHERE marks evalMarks interpretation REPORT report
    (59) identification -> . IDENTIFY marks evalMarks suchthat REPORT report
    (60) identification -> . IDENTIFY marks evalMarks REPORT report
    (61) identification -> . IDENTIFY marks evalMarks suchthat interpretation REPORT report
    (62) identification -> . IDENTIFY marks evalMarks interpretation REPORT report
    (10) var -> . DEFINE ID IS object options SEMICOLON
    (11) var -> . DEFINE ID IS object options AS NEUTRALLOSS SEMICOLON
    (12) var -> . DEFINE list IS object options SEMICOLON
    (13) var -> . DEFINE ID options SEMICOLON

    IDENTIFY        shift and go to state 7
    DEFINE          shift and go to state 12

    identification                 shift and go to state 42
    var                            shift and go to state 38

state 15

    (15) object -> onlyObj .

    SEMICOLON       reduce using rule 15 (object -> onlyObj .)
    PLUS            reduce using rule 15 (object -> onlyObj .)
    MINUS           reduce using rule 15 (object -> onlyObj .)
    TIMES           reduce using rule 15 (object -> onlyObj .)
    DIVIDE          reduce using rule 15 (object -> onlyObj .)
    AND             reduce using rule 15 (object -> onlyObj .)
    OR              reduce using rule 15 (object -> onlyObj .)
    REPORT          reduce using rule 15 (object -> onlyObj .)
    INTERPRETATION  reduce using rule 15 (object -> onlyObj .)
    RPAREN          reduce using rule 15 (object -> onlyObj .)
    EQUALS          reduce using rule 15 (object -> onlyObj .)
    GT              reduce using rule 15 (object -> onlyObj .)
    GE              reduce using rule 15 (object -> onlyObj .)
    LE              reduce using rule 15 (object -> onlyObj .)
    LT              reduce using rule 15 (object -> onlyObj .)
    NE              reduce using rule 15 (object -> onlyObj .)
    COMMA           reduce using rule 15 (object -> onlyObj .)
    IN              reduce using rule 15 (object -> onlyObj .)
    WITH            reduce using rule 15 (object -> onlyObj .)
    RBRACKET        reduce using rule 15 (object -> onlyObj .)
    AS              reduce using rule 15 (object -> onlyObj .)
    IFA             reduce using rule 15 (object -> onlyObj .)
    IFF             reduce using rule 15 (object -> onlyObj .)
    ARROW           reduce using rule 15 (object -> onlyObj .)
    SUCHTHAT        reduce using rule 15 (object -> onlyObj .)


state 16

    (74) boolmarks -> scan .

    RPAREN          reduce using rule 74 (boolmarks -> scan .)
    OR              reduce using rule 74 (boolmarks -> scan .)
    AND             reduce using rule 74 (boolmarks -> scan .)
    IFA             reduce using rule 74 (boolmarks -> scan .)
    IFF             reduce using rule 74 (boolmarks -> scan .)
    ARROW           reduce using rule 74 (boolmarks -> scan .)
    LE              reduce using rule 74 (boolmarks -> scan .)
    REPORT          reduce using rule 74 (boolmarks -> scan .)
    SUCHTHAT        reduce using rule 74 (boolmarks -> scan .)
    INTERPRETATION  reduce using rule 74 (boolmarks -> scan .)


state 17

    (65) marks -> boolmarks .
    (68) boolmarks -> boolmarks . OR boolmarks
    (69) boolmarks -> boolmarks . AND boolmarks
    (70) boolmarks -> boolmarks . IFA boolmarks
    (71) boolmarks -> boolmarks . IFF boolmarks
    (72) boolmarks -> boolmarks . ARROW boolmarks
    (73) boolmarks -> boolmarks . LE boolmarks

    REPORT          reduce using rule 65 (marks -> boolmarks .)
    SUCHTHAT        reduce using rule 65 (marks -> boolmarks .)
    INTERPRETATION  reduce using rule 65 (marks -> boolmarks .)
    OR              shift and go to state 48
    AND             shift and go to state 43
    IFA             shift and go to state 46
    IFF             shift and go to state 45
    ARROW           shift and go to state 47
    LE              shift and go to state 44


state 18

    (29) list -> LBRACKET . listcontent RBRACKET
    (30) listcontent -> . listcontent COMMA object
    (31) listcontent -> . object
    (14) object -> . withAttr
    (15) object -> . onlyObj
    (22) withAttr -> . ID DOT ID LBRACE ID RBRACE
    (23) withAttr -> . ID DOT ID LBRACE STRING RBRACE
    (24) withAttr -> . ID DOT ID
    (25) withAttr -> . varcontent DOT ID
    (26) withAttr -> . list DOT ID
    (16) onlyObj -> . ID LBRACE ID RBRACE
    (17) onlyObj -> . ID
    (18) onlyObj -> . list
    (19) onlyObj -> . varcontent
    (20) onlyObj -> . ID LPAREN arguments RPAREN LBRACE ID RBRACE
    (21) onlyObj -> . ID LPAREN arguments RPAREN
    (32) varcontent -> . tolerancetype
    (33) varcontent -> . FLOAT
    (34) varcontent -> . INTEGER
    (35) varcontent -> . PLUS INTEGER
    (36) varcontent -> . MINUS INTEGER
    (37) varcontent -> . STRING
    (38) varcontent -> . SFSTRING
    (29) list -> . LBRACKET listcontent RBRACKET
    (50) tolerancetype -> . FLOAT DA
    (51) tolerancetype -> . FLOAT PPM
    (52) tolerancetype -> . INTEGER DA
    (53) tolerancetype -> . INTEGER RES
    (54) tolerancetype -> . INTEGER PPM

    ID              shift and go to state 51
    FLOAT           shift and go to state 31
    INTEGER         shift and go to state 30
    PLUS            shift and go to state 22
    MINUS           shift and go to state 19
    STRING          shift and go to state 20
    SFSTRING        shift and go to state 26
    LBRACKET        shift and go to state 18

    tolerancetype                  shift and go to state 24
    onlyObj                        shift and go to state 15
    varcontent                     shift and go to state 21
    object                         shift and go to state 49
    list                           shift and go to state 32
    withAttr                       shift and go to state 27
    listcontent                    shift and go to state 50

state 19

    (36) varcontent -> MINUS . INTEGER

    INTEGER         shift and go to state 52


state 20

    (37) varcontent -> STRING .

    DOT             reduce using rule 37 (varcontent -> STRING .)
    AND             reduce using rule 37 (varcontent -> STRING .)
    OR              reduce using rule 37 (varcontent -> STRING .)
    REPORT          reduce using rule 37 (varcontent -> STRING .)
    INTERPRETATION  reduce using rule 37 (varcontent -> STRING .)
    RPAREN          reduce using rule 37 (varcontent -> STRING .)
    EQUALS          reduce using rule 37 (varcontent -> STRING .)
    GT              reduce using rule 37 (varcontent -> STRING .)
    GE              reduce using rule 37 (varcontent -> STRING .)
    LE              reduce using rule 37 (varcontent -> STRING .)
    LT              reduce using rule 37 (varcontent -> STRING .)
    NE              reduce using rule 37 (varcontent -> STRING .)
    PLUS            reduce using rule 37 (varcontent -> STRING .)
    MINUS           reduce using rule 37 (varcontent -> STRING .)
    TIMES           reduce using rule 37 (varcontent -> STRING .)
    DIVIDE          reduce using rule 37 (varcontent -> STRING .)
    COMMA           reduce using rule 37 (varcontent -> STRING .)
    IN              reduce using rule 37 (varcontent -> STRING .)
    WITH            reduce using rule 37 (varcontent -> STRING .)
    SEMICOLON       reduce using rule 37 (varcontent -> STRING .)
    AS              reduce using rule 37 (varcontent -> STRING .)
    IFA             reduce using rule 37 (varcontent -> STRING .)
    IFF             reduce using rule 37 (varcontent -> STRING .)
    ARROW           reduce using rule 37 (varcontent -> STRING .)
    SUCHTHAT        reduce using rule 37 (varcontent -> STRING .)
    RBRACKET        reduce using rule 37 (varcontent -> STRING .)


state 21

    (25) withAttr -> varcontent . DOT ID
    (19) onlyObj -> varcontent .

    DOT             shift and go to state 53
    IN              reduce using rule 19 (onlyObj -> varcontent .)
    COMMA           reduce using rule 19 (onlyObj -> varcontent .)
    PLUS            reduce using rule 19 (onlyObj -> varcontent .)
    MINUS           reduce using rule 19 (onlyObj -> varcontent .)
    TIMES           reduce using rule 19 (onlyObj -> varcontent .)
    DIVIDE          reduce using rule 19 (onlyObj -> varcontent .)
    RPAREN          reduce using rule 19 (onlyObj -> varcontent .)
    WITH            reduce using rule 19 (onlyObj -> varcontent .)
    AND             reduce using rule 19 (onlyObj -> varcontent .)
    OR              reduce using rule 19 (onlyObj -> varcontent .)
    REPORT          reduce using rule 19 (onlyObj -> varcontent .)
    INTERPRETATION  reduce using rule 19 (onlyObj -> varcontent .)
    EQUALS          reduce using rule 19 (onlyObj -> varcontent .)
    GT              reduce using rule 19 (onlyObj -> varcontent .)
    GE              reduce using rule 19 (onlyObj -> varcontent .)
    LE              reduce using rule 19 (onlyObj -> varcontent .)
    LT              reduce using rule 19 (onlyObj -> varcontent .)
    NE              reduce using rule 19 (onlyObj -> varcontent .)
    SEMICOLON       reduce using rule 19 (onlyObj -> varcontent .)
    IFA             reduce using rule 19 (onlyObj -> varcontent .)
    IFF             reduce using rule 19 (onlyObj -> varcontent .)
    ARROW           reduce using rule 19 (onlyObj -> varcontent .)
    SUCHTHAT        reduce using rule 19 (onlyObj -> varcontent .)
    AS              reduce using rule 19 (onlyObj -> varcontent .)
    RBRACKET        reduce using rule 19 (onlyObj -> varcontent .)


state 22

    (35) varcontent -> PLUS . INTEGER

    INTEGER         shift and go to state 54


state 23

    (59) identification -> IDENTIFY marks . evalMarks suchthat REPORT report
    (60) identification -> IDENTIFY marks . evalMarks REPORT report
    (61) identification -> IDENTIFY marks . evalMarks suchthat interpretation REPORT report
    (62) identification -> IDENTIFY marks . evalMarks interpretation REPORT report
    (75) evalMarks -> .

    REPORT          reduce using rule 75 (evalMarks -> .)
    SUCHTHAT        reduce using rule 75 (evalMarks -> .)
    INTERPRETATION  reduce using rule 75 (evalMarks -> .)

    evalMarks                      shift and go to state 55

state 24

    (32) varcontent -> tolerancetype .

    DOT             reduce using rule 32 (varcontent -> tolerancetype .)
    AND             reduce using rule 32 (varcontent -> tolerancetype .)
    OR              reduce using rule 32 (varcontent -> tolerancetype .)
    REPORT          reduce using rule 32 (varcontent -> tolerancetype .)
    INTERPRETATION  reduce using rule 32 (varcontent -> tolerancetype .)
    RPAREN          reduce using rule 32 (varcontent -> tolerancetype .)
    EQUALS          reduce using rule 32 (varcontent -> tolerancetype .)
    GT              reduce using rule 32 (varcontent -> tolerancetype .)
    GE              reduce using rule 32 (varcontent -> tolerancetype .)
    LE              reduce using rule 32 (varcontent -> tolerancetype .)
    LT              reduce using rule 32 (varcontent -> tolerancetype .)
    NE              reduce using rule 32 (varcontent -> tolerancetype .)
    PLUS            reduce using rule 32 (varcontent -> tolerancetype .)
    MINUS           reduce using rule 32 (varcontent -> tolerancetype .)
    TIMES           reduce using rule 32 (varcontent -> tolerancetype .)
    DIVIDE          reduce using rule 32 (varcontent -> tolerancetype .)
    SEMICOLON       reduce using rule 32 (varcontent -> tolerancetype .)
    COMMA           reduce using rule 32 (varcontent -> tolerancetype .)
    IN              reduce using rule 32 (varcontent -> tolerancetype .)
    WITH            reduce using rule 32 (varcontent -> tolerancetype .)
    AS              reduce using rule 32 (varcontent -> tolerancetype .)
    IFA             reduce using rule 32 (varcontent -> tolerancetype .)
    IFF             reduce using rule 32 (varcontent -> tolerancetype .)
    ARROW           reduce using rule 32 (varcontent -> tolerancetype .)
    SUCHTHAT        reduce using rule 32 (varcontent -> tolerancetype .)
    RBRACKET        reduce using rule 32 (varcontent -> tolerancetype .)


state 25

    (99) scan -> object . IN scope options

    IN              shift and go to state 56


state 26

    (38) varcontent -> SFSTRING .

    DOT             reduce using rule 38 (varcontent -> SFSTRING .)
    AND             reduce using rule 38 (varcontent -> SFSTRING .)
    OR              reduce using rule 38 (varcontent -> SFSTRING .)
    REPORT          reduce using rule 38 (varcontent -> SFSTRING .)
    INTERPRETATION  reduce using rule 38 (varcontent -> SFSTRING .)
    RPAREN          reduce using rule 38 (varcontent -> SFSTRING .)
    EQUALS          reduce using rule 38 (varcontent -> SFSTRING .)
    GT              reduce using rule 38 (varcontent -> SFSTRING .)
    GE              reduce using rule 38 (varcontent -> SFSTRING .)
    LE              reduce using rule 38 (varcontent -> SFSTRING .)
    LT              reduce using rule 38 (varcontent -> SFSTRING .)
    NE              reduce using rule 38 (varcontent -> SFSTRING .)
    PLUS            reduce using rule 38 (varcontent -> SFSTRING .)
    MINUS           reduce using rule 38 (varcontent -> SFSTRING .)
    TIMES           reduce using rule 38 (varcontent -> SFSTRING .)
    DIVIDE          reduce using rule 38 (varcontent -> SFSTRING .)
    SEMICOLON       reduce using rule 38 (varcontent -> SFSTRING .)
    COMMA           reduce using rule 38 (varcontent -> SFSTRING .)
    IN              reduce using rule 38 (varcontent -> SFSTRING .)
    WITH            reduce using rule 38 (varcontent -> SFSTRING .)
    AS              reduce using rule 38 (varcontent -> SFSTRING .)
    IFA             reduce using rule 38 (varcontent -> SFSTRING .)
    IFF             reduce using rule 38 (varcontent -> SFSTRING .)
    ARROW           reduce using rule 38 (varcontent -> SFSTRING .)
    SUCHTHAT        reduce using rule 38 (varcontent -> SFSTRING .)
    RBRACKET        reduce using rule 38 (varcontent -> SFSTRING .)


state 27

    (14) object -> withAttr .
